Collapsed revision * ->repaired & comprehensible friendsOverview * ->repaired & comprehensible friendsOverview

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-style.less
@@ -40,6 +40,7 @@ body {
     background-image: url("/resources/bootstrap/img/bg.png");
 }
 
+
 ul.dropdown-menu.list-options {
 	font-size: 12px !important;
 	min-width: 200px;
@@ -1102,6 +1103,32 @@ div.clearline {
 	-webkit-border-radius:6px 0 6px 6px;
 	-moz-border-radius:6px 0 6px 6px;
 	border-radius:6px 0 6px 6px;
+}
+
+h1.content-heading {
+	font-size: 1.8em;
+	border-bottom: 1px solid #333;
+}
+
+button.removeFriend,
+button.addFriend {
+	margin-top: 0.5em;
+}
+
+button.removeFriend {
+	width: 7em;
+}
+
+.vspace {
+	margin-top: 15px;
+}
+
+.tab-content h2.content-header {
+	font-size: 20px;
+}
+
+.tab-content h3.list-headline {
+	font-size: 18px;
 }
 
 a.moreLink {
